@@ -37,6 +37,7 @@
 * Mundipagg: send authorization_secret_key on all transaction types [edgarv09] #4635
 * CommerceHub: Add new gateway [naashton] #4640
 * CyberSource: Update installment data method [rachelkirk] #4642
+* Element: fix bug with billing address email [jcreiff] #4644
 
 == Version 1.127.0 (September 20th, 2022)
 * BraintreeBlue: Add venmo profile_id [molbrown] #4512
